style: fix sidebar spacing on desktop

--- a/assets/scss/elements/blog/_single.scss
+++ b/assets/scss/elements/blog/_single.scss
@@ -2,6 +2,12 @@
   margin-top: 30px;
 }
 
+.single, .page {
+  .nv-sidebar-wrap {
+    margin-top: 30px;
+  }
+}
+
 .nv-thumb-wrap + .nv-title-meta-wrap   {
   margin-top: $spacing-sm;
 }
